<resources>
    <string name="app_name">Calculator by rocky</string>
    <string name="text_view_result">Результат</string>

    <string name="div">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="mult">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="dif">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="sum">+</string>
    <string name="zero">0</string>
    <string name="result">=</string>
    <string name="reset">Reset</string>
    <string name="exit">exit</string>
    <string name="input">O</string>


</resources>