<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:columnCount="4"
        android:rowCount="9">

        <TextView
            android:id="@+id/inputTV"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_margin="20sp"
            android:width="330dp"
            android:gravity="end"
            android:text="@string/input"
            android:textSize="28sp" />


        <TextView
            android:id="@+id/resultTV"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_margin="20sp"
            android:width="330dp"
            android:gravity="center_horizontal"
            android:hint="@string/text_view_result"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <Button
            android:id="@+id/divBTN"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/div" />

        <Button
            android:id="@+id/oneBTN"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/one" />

        <Button
            android:id="@+id/twoBTN"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/two" />

        <Button
            android:id="@+id/threeBTN"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/three" />

        <Button
            android:id="@+id/multBTN"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/mult" />

        <Button
            android:id="@+id/fourBTN"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/four" />

        <Button
            android:id="@+id/fiveBTN"
            android:layout_row="4"
            android:layout_column="1"
            android:text="@string/five" />

        <Button
            android:id="@+id/sixBTN"
            android:layout_row="4"
            android:layout_column="2"
            android:text="@string/six" />

        <Button
            android:id="@+id/difBTN"
            android:layout_row="4"
            android:layout_column="3"
            android:text="@string/dif" />

        <Button
            android:id="@+id/sevenBTN"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eightBTN"
            android:layout_row="5"
            android:layout_column="1"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nineBTN"
            android:layout_row="5"
            android:layout_column="2"
            android:text="@string/nine" />

        <Button
            android:id="@+id/sumBTN"
            android:layout_rowSpan="3"
            android:height="150dp"
            android:text="@string/sum" />

        <Button
            android:id="@+id/zeroBTN"
            android:layout_width="175dp"
            android:layout_columnSpan="2"
            android:text="@string/zero" />

        <Button
            android:id="@+id/resultBTN"
            android:layout_width="264dp"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:text="@string/result" />

        <Button
            android:id="@+id/resetBTN"
            android:layout_width="348dp"
            android:layout_columnSpan="4"
            android:text="@string/reset" />

    </GridLayout>

</TableLayout>